# Smriti

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.cursor/plans/: llm_memory_architecture_design_8777906d.plan.md
.cursor/rules/: engineering-workflow.mdc  incremental-output.mdc
alembic/: env.py
alembic/versions/: 0001_initial_schema_memories_and_edges_tables.py  0002_processed_imports_table.py
collectors/browser/: manifest.json
collectors/browser/src/: api.js  background.js  config.js  content.js  popup.css  popup.html  popup.js
docker/: entrypoint.sh
src/smriti/: __init__.py  api.py  cli.py  config.py  consolidation.py  context.py  daemon.py  event_bus.py  llm_utils.py  provider.py  retrieval.py
src/smriti/db/: __init__.py  engine.py  repository.py  tables.py
src/smriti/imports/: __init__.py  tracker.py  watcher.py
src/smriti/ingestion/: __init__.py  extractor.py  router.py  salience.py
src/smriti/memory/: __init__.py  buffer.py  episodic.py  semantic.py  working.py
src/smriti/models/: __init__.py  events.py  memory.py
src/smriti/static/: index.html
tests/: conftest.py  test_api.py  test_buffer.py  test_cli.py  test_config.py  test_consolidation.py  test_context.py  test_daemon.py  test_db.py  test_episodic.py  test_event_bus.py  test_import_tracker.py  test_import_watcher.py  test_ingestion.py  test_llm_utils.py  test_models.py  test_parsers.py  test_provider.py  test_retrieval.py  test_semantic.py  test_working_memory.py
(+9 files in other folders)
