[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smriti"
version = "0.1.0"
description = "A multi-tier memory system for LLMs inspired by human cognitive memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Abhinav" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "asyncpg>=0.30.0",
    "valkey>=6.1.0",
    "pgvector>=0.3.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "click>=8.1.0",
    "tiktoken>=0.8.0",
    "numpy>=1.26.0",
    "tomli>=2.2.0; python_version < '3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
smriti = "smriti.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/smriti"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
